Major updates to the structure of the application
- Events and states for the puppet have been separated into separate
files
- Events now take a form more similar to the standard the Backbone
introduced
- Components have been generalized

--- a/bower.json
+++ b/bower.json
@@ -19,5 +19,11 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "devDependencies": {
+    "underscore": "~1.5.2",
+    "backbone": "~1.1.0",
+    "marionette": "~1.4.1",
+    "jquery": "~2.0.3"
+  }
 }
