--- a/bower.json
+++ b/bower.json
@@ -27,6 +27,6 @@
     "jquery": "~2.0.3"
   },
   "dependencies": {
-    "backbone.wreqrchannel": "~0.2.0"
+    "backbone.wreqr-channel": "~0.3.1"
   }
 }
