--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "grunt": "~0.4.2",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.7"
+    "grunt-contrib-uglify": "~0.2.7",
+    "load-grunt-tasks": "~0.4.0",
+    "grunt-blanket-mocha": "~0.4.0",
+    "blanket": "~1.1.6",
+    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-connect": "~0.7.1",
+    "grunt-contrib-copy": "~0.5.0"
   }
 }
