--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "puppets",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "A modular framework for Marionette",
   "main": "build/puppets.js",
   "keywords": [
     "puppets",
+    "puppet",
+    "puppets.js",
+    "components",
+    "marionette.js",
     "marionette",
-    "modules"
+    "modules",
+    "backbone",
+    "backbone.js",
+    "wreqr",
+    "library"
   ],
   "repository": {
     "type": "git",
